fixed: add the unique attr in model and change the parameter 'username' in login to 'name'
